# action

./: .gitattributes  .gitignore  CLAUDE-ACTION.md  LICENSE  README.md  action.yml  effort.md  entry  entry.build.ts  entry.cjs  entry.js  entry.ts  esbuild.config.js  external.ts  index.cjs  index.js  index.ts  main.ts  modes.ts  package-lock.json  package.json  payload.ts  play.ts  pnpm-lock.yaml  rolldown.config.js  scratch.ts  test-agents.ts  test-landlock.ts  todo.md  tsconfig.json  vitest.config.ts  workflows.ts
.husky/: pre-commit
.landlock-test-repo/: existing-file.txt
agents/: claude.ts  codex.ts  cursor.ts  factory.ts  gemini.ts  index.ts  instructions.ts  jules.ts  opencode.ts  shared.ts  types.ts
dispatch/: action.yml  entry.ts
docs/: docker.md  security.md  webfetch.md  websearch.md
fixtures/: agent-mode.ts  bash-disabled.ts  bash-restricted.ts  bash-test.ts  basic.ts  basic.txt  claude-effort.ts  codex-effort.ts  cursor-effort.ts  gemini-effort.ts  issue-comment.ts  issue-created.ts  pr-review-comment.ts  pull-request.ts  sandbox-test.ts  sandbox.ts  simple.ts  workflow-dispatch.ts
get-installation-token/: entry  entry.ts  token.ts
github/: context.ts  modes.ts  prompt-enhancer.ts
mcp/: README.md  arkConfig.ts  bash.ts  checkSuite.ts  checkout.ts  comment.ts  config.ts  debug-server.sh  debug.ts  dependencies.ts  files.ts  git.ts  index.ts  issue.ts  issueComments.ts  issueEvents.ts  issueInfo.ts  labels.ts  pr.ts  prInfo.ts  (+5 more)
sandbox/: .gitignore  Cargo.toml  index.ts  package.json  pnpm-lock.yaml  sandbox.d.ts
sandbox/src/: lib.rs
(+74 files in other folders)
