[package]
name = "pullfrog-sandbox"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
landlock = "0.4"
enumflags2 = "0.7"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
